# mind-server

./: .gitattributes  CMakeEncrypt.sh  CMakeLists.txt  Dockerfile  Dockerfile.2.04  DockerfileServer  README.md  _mind.manifest.json  compose.yml  mind.manifest.json  mind.manifest.json.in  shell-in-docker.bat  start-docker.bat
.github/: release.yml
.github/workflows/: docker-image.yml  onMergeRequest.yml
commands/: aliases  compile  dev  dev.sh  mind  mind-test  mind-vehu-vista  mind-vista  mind.d  mind.systemd
config/: mind.conf  mind.config  mind.ydbcrypt  user-api.json  user-commands.json  users.json
config-tls/: mind.key  mind.pem  mind.ydbcrypt
docs/: commands.md  mindServer.json
docs/manual/: command-line-switches.md  command-line.md  configuration-file.md  index.md  x-files.md
docs/manual/MIND-apps/: index.md
docs/manual/MIND-apps/json-file/: app-json-file.md  app-parameter.md  app-property.md
docs/manual/configuration/: command-line-switches.md  configuration-file.md  configuration-tls.md  configuration.md  env-var-settings.md  security-considerations.md  users-file.md
docs/namespaces/: index.json  mind.md  namespace.fs.md  namespace.process.md  namespace.server.md
docs/namespaces/fs/: fs.mkdir.md  fs.readDir.md  fs.readfile.md  fs.removeFile.md
docs/namespaces/process/: process.cwdGet.md  process.exec.md  process.memUsage.md
docs/namespaces/server/: server.kill.md
docs/slides/: def1.pptx
docs/technical-manual/: command-line-switches.md  creating-a-driver.md  initial-handshaking.md  logging-in.md  protocol.md  resp3-protocol.md
docs/technical-manual/built-in-objects/namespaces/: namespace.process.md
docs/technical-manual/namespaces/fs/: fs.appendFile.md  fs.readTree.md  fs.rmdir.md  fs.stat.md
docs/technical-manual/namespaces/process/: process.cwdSet.md  process.dateTime.md  process.unixtime.md
docs/user-manual/: getting-started.md  index.md  mind-and-vista.md  server-installation.md  system-architecture.md
docs/user-manual/architecture/: remote-access-to-m-code.md  remote-sessions-process-space.md  scaling-up-to-meet-enterprise-demands.md  supported-platforms.md  the-socket-server.md  tls-encryption.md
docs/user-manual/getting-started/: configuration.md  installation.md  monitoring-and-logging.md  run-the-server.md  terminating-the-server.md
docs/user-manual/server-configuration/: bringing-process-workers-down.md  bringing-the-server-down.md  command-line-switches.md  configuration-file.md  server-configuration.md  starting-up-the-server.md  tls.md  user-api.md  users-file.md
docs/user-manual/server-configuration/userApi/: app-example-simple.md  app-json-file.md  app-method.md  app-namespace.md  app-parameter.md  app-property.md  index.md  m-global-scoped-variables.md  working-directory.md
docs/user-manual/userApi/: index.md
slides/: def1.pptx
src/clients/nodejs/js/: constants.js  index.js  index.mjs  index2.js  login.js  namespace-fs.js  namespace-process.js  namespace-server.js  test.js
src/demos/VistA/dvp/: DVPDOC1.xml  DVPDOC2.xml  DVPEPTS.xml  DVPERR.xml  DVPFM1.xml  DVPIAM.xml  DVPKIDS1.xml  DVPKIDSA.xml  DVPLOG1.xml  DVPLOG2.xml  DVPLOG3.xml  DVPLOGIN.xml  DVPMAN.xml  DVPMSG1.xml  DVPPUB.xml  DVPPXL1.xml  DVPRL.xml  DVPRPC.xml  DVPSKT.xml  DVPTCP.xml  DVPTCPL.xml  DVPTCPM.xml  DVPTCPM2.xml  DVPUTL.xml  DVPUTLS.xml  DVPVER.xml  DVPVLL.xml  DVPXDG.xml  DVPXRX.xml  DVPXRX1.xml  DVPXUTL.xml
src/server/m/: _mindLogger.m  _mindTerminal.m  _mindVersion.m  call.m  terminal.m
src/server/m/init/: _mind.m  _mindCmdLineParser.m  _mindConfigFileParser.m  _mindUserApiParser.m  _mindUserApiViewer.m  _mindUsersParser.m  cmdParser.m
src/server/m/namespaces/: _mindContext.m  _mindNSfs.m  _mindNSglvn.m  _mindNSpool.m  _mindNSprocess.m  _mindNSserver.m  _mindNSsession.m  _mindNSuapi.m
test/: mind-test-globals.zwr  mindTestGlobals.zwr  mut-server.sh  mut.sh
test/m/: _mindTestUtils.m  _ydbxiderTestApiHash.m  mindCmake.m  mindCommandLineParser.m  mindConfigFileParser.m  mindSettingsOverrides.m  mindUserApiFileParser.m  mindUserApiFileParser2.m  mindUsersFile.m  mut.sh
test/server/m/: _ut.m  _ut1.m  _ydbxiderTestUtils.m
test/uApi/: bhaskar.json  demo.m  hooks-and-code.json  test-existing.json  test-methods-new.json  test-methods.json  test-obj-structure-11-23.json  test-obj-structure-11.json  test-obj-structure-12.json  test-obj-structure-13-23-3x-desc.json  test-obj-structure-13-23-3x.json  test-obj-structure-13.json  test-obj-structure-duplicates.json  test-server-vars.json  test.m  testParams.m  testParamsNew.m  user-api-first-test.json  user-api-hospital.json  user-api.json
test/uApi/client-test/: hooks-and-code.json  test-existing.json  test-map.json  test-methods-new.json  test-methods.json  test-obj-structure-11-23.json  test-obj-structure-11.json  test-obj-structure-12.json  test-obj-structure-13-23-3x-4x-desc.json  test-obj-structure-13-23-3x-desc.json  test-obj-structure-13-23-3x.json  test-obj-structure-13.json  test-obj-structure-duplicates.json  test-vars.json  test.json  testParams.m
test/uApi/demo/: demo-banking.json  demo.m  test-existing.json
test/uApi/demo/ehs/: demo.m  (+2 more)
test/uApi/server-test/: test-duplicates-1.json  test-duplicates-10.json  test-duplicates-11.json  test-duplicates-12.json  test-duplicates-2.json  test-duplicates-3.json  test-duplicates-4.json  test-duplicates-5.json  test-duplicates-6.json  test-duplicates-7.json  test-duplicates-8.json  test-duplicates-9.json
test/uApi/server-test-do-not-move/: test-duplicates-5.json
test/uApi/storage/: test-methods.json  test-obj-structure-11.json  test-obj-structure-13-23-3x-desc.json  test-obj-structure-13-23-3x.json  test-obj-structure-13.json  test-obj-structure-duplicates.json  test-vars.json
test/uApi/temp/: demo-banking.json  demo.m  test-user-api.json  user-api-first-test.json
test/uApi/test/: test-duplicates-1.json  test-duplicates-2.json  test-duplicates-3.json  test-duplicates-4.json  test-duplicates-5.json  test-duplicates-6.json  test-duplicates-7.json  test-duplicates-8.json  test-duplicates-9.json  test-obj-structure-12.json
(+60 files in other folders)
